Increase BitmapFetcherService cache size

The larger cache prevents entity images from flickering while
typing. The new size is expected to consume ~288 kilobytes,
and is not changed for Android.

Bug: 866580
Change-Id: Ifa53ffa82598335461c286547085620c122a44a1
Reviewed-on: https://chromium-review.googlesource.com/1150415
Reviewed-by: Peter Williamson <petewil@chromium.org>
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Reviewed-by: Rachel Blum <groby@chromium.org>
Commit-Queue: Orin Jaworski <orinj@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579631}
Former-commit-id: ffdec5902b4058b971faed828c17ac3300153e6b