chrome/browser/bitmap_fetcher/bitmap_fetcher_service.cc
@@ -9,6 +9,7 @@
 
 #include "base/macros.h"
 #include "base/memory/weak_ptr.h"
+#include "build/build_config.h"
 #include "chrome/browser/bitmap_fetcher/bitmap_fetcher.h"
 #include "chrome/browser/profiles/profile.h"
 #include "content/public/browser/storage_partition.h"
@@ -18,7 +19,19 @@
 namespace {
 
 const size_t kMaxRequests = 25;  // Maximum number of inflight requests allowed.
-const int kMaxCacheEntries = 5;  // Maximum number of cache entries.
+
+// Maximum number of cache entries. This was 5 before, which worked well enough
+// for few images like weather answers, but with rich entity suggestions showing
+// several images at once, even changing some while the user types, a larger
+// cache is necessary to avoid flickering. Each cache entry is expected to take
+// 16kb (64x64 @ 32bpp), and experimentation shows 18 entries is enough to
+// eliminate flicker with the standard 6 suggestion omnibox filled with entities
+// so the maximum expected memory consumption is ~288kb per browser window.
+#if defined(OS_ANDROID)
+const int kMaxCacheEntries = 5;
+#else
+const int kMaxCacheEntries = 18;
+#endif
 
 }  // namespace.
 
